--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+body{
+    width: 100vw;
+}
+
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -36,3 +41,5 @@
     transform: rotate(360deg);
   }
 }
+
+
