--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -1,4 +1,3 @@
-/* Homepage.css */
 .Homepage {
   display: block;
   margin: 0px;
@@ -8,6 +7,7 @@
   animation: gradientBG 15s ease infinite;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+    align-items: center;
 }
 
 @keyframes gradientBG {
