--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -30,10 +30,10 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  margin-block-end: 0.67em;
+  margin-block-end: 0.4em;
   font-weight: bold;
   padding-top: 4%;
-  padding-bottom: 1%;
+  padding-bottom: 3%;
 }
 
 .H-typewriter {
@@ -243,6 +243,7 @@
   margin-top: 10px;
   font-family: "Lucida Sans", Geneva, Verdana, sans-serif;
   transition: all 0.3s ease;
+  margin: 10px;
 }
 .H-cta button:hover {
   background-color: brown;
